<resources>
    <string name="app_name">Remote Control</string>
    <string name="tv">TV</string>
    <string name="apple_tv">Apple TV</string>
    <string name="power">power</string>
    <string name="source">source</string>
    <string name="volume_up">volup</string>
    <string name="volume_down">voldown</string>
    <string name="up">up</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="down">down</string>
    <string name="extpl">extpl</string>
    <string name="menu">menu</string>
    <string name="play">play</string>
    <string name="roku_tv">Roku</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="asterisk">*</string>
    <string name="rewind">REW</string>
    <string name="ffw">FFW</string>
    <string name="netflix">Netflix</string>
</resources>
