<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:columnCount="5"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/tv"
        android:textColor="@android:color/white"
        android:layout_row="0"
        android:layout_columnSpan="3" />

    <Button
        android:id="@+id/tv_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@drawable/button"
        android:contentDescription="@string/power"
        android:minWidth="40dp"
        android:onClick="updateTVButton"
        android:text="@string/power"
        android:textColor="@color/button_text" />

    <Button
        android:id="@+id/tv_source"
        android:contentDescription="@string/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:minWidth="40dp"
        android:background="@drawable/button"
        android:textColor="@color/button_text"
        android:text="@string/source"
        android:onClick="updateTVButton" />

    <ImageButton
        android:id="@+id/tv_volume_dec"
        android:contentDescription="@string/volume_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_volume_down_white_24dp"
        android:onClick="updateTVButton" />

    <ImageButton
        android:id="@+id/tv_volume_inc"
        android:contentDescription="@string/volume_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        app:srcCompat="@drawable/ic_volume_up_white_24dp"
        android:onClick="updateTVButton" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/apple_tv"
        android:textColor="@android:color/white"
        android:layout_columnSpan="3" />

    <ImageButton
        android:id="@+id/apple_up"
        android:contentDescription="@string/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:onClick="updateTVButton"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />

    <Button
        android:id="@+id/apple_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button"
        android:contentDescription="@string/menu"
        android:minWidth="40dp"
        android:onClick="updateTVButton"
        android:text="@string/menu"
        android:textColor="@color/button_text" />

    <ImageButton
        android:id="@+id/apple_play"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_row="4"
        android:layout_column="4"
        android:background="@drawable/button"
        android:contentDescription="@string/play"
        android:onClick="updateTVButton"
        android:text="@string/play"
        android:textColor="@color/button_text"
        app:srcCompat="@drawable/ic_play_arrow_24dp" />

    <ImageButton
        android:id="@+id/apple_left"
        android:contentDescription="@string/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp"
        android:onClick="updateTVButton" />

    <ImageButton
        android:id="@+id/apple_select"
        android:contentDescription="@string/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        app:srcCompat="@drawable/ic_lens_white_24dp"
        android:onClick="updateTVButton" />

    <ImageButton
        android:id="@+id/apple_right"
        android:contentDescription="@string/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:onClick="updateTVButton" />

    <ImageButton
        android:id="@+id/apple_down"
        android:contentDescription="@string/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:onClick="updateTVButton" />

</GridLayout>